# server-mvc

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/: session.py
nagare/server/: mvc_application.py  mvc_publisher.py
nagare/services/: http_session.py  presentation.py
nagare/sessions/: __init__.py  common.py  exceptions.py  serializer.py
src/nagare/server/: mvc_application.py
src/nagare/services/: presentation.py
tests/: test_merge_head.py  test_serializer.py
