[metadata]
name = nagare-server-mvc
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Nagare MVC application server
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/server-mvc
    Tracker = https://github.com/nagareproject/server-mvc/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-services
    nagare-renderers-html
    nagare-server-http

[options.entry_points]
nagare.services =
    presentation = nagare.services.presentation:PresentationService

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
